# Netetris

./: AnalystManager.cpp  AnalystManager.h  Board.qml  BoardManager.cpp  BoardManager.h  CMakeLists.txt  Cell.qml  CellActionClass.h  CellStateClass.h  DialogGameOver.qml  Figures.h  GameLogicManager.cpp  GameLogicManager.h  Gameplay.qml  Generator.cpp  Generator.h  InformationBlock.qml  MainMenu.qml  NetetrisModel.cpp  NetetrisModel.h  NextFigure.qml  NextFigureModel.cpp  NextFigureModel.h  board.cpp  board.h  boardmodel.cpp  boardmodel.h  bootstrapper.cpp  bootstrapper.h  cell.cpp  cell.h  common.h  main.cpp  main.qml  mediator.cpp  mediator.h  qml.qrc  storagegames.cpp  storagegames.h
items/: Button.qml  MenuButton.qml  Text.qml
